Fix home page content disappearing on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -591,10 +591,6 @@ footer {
     overflow-x: hidden;
   }
 
-  .col-12 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
 }
 
 /* Very small mobile (400px and smaller) */
